0.12.1 (2017-01-08)
    - Fix compatibility with Jinja 2.9.
    - When globbing, include files in alphabetical order (Sam Douglas).
    - Remove duplicate files from bundles (Sam Douglas).
    - Support for PyInstaller (Ilya Kreymer).
    - Fix the sass filter (Dan Callaghan).

0.12 (2016-08-18)
    - Babel filter (JDeuce).
    - NodeSASS filter (Luke Benstead).
    - Autoprefixer 6 filter (Eugeniy Kuznetsov).
    - Many other small changes and improvements by various contributors.

0.11.1 (2015-08-26)
    - Fix compass filter bug (Pablo Aguiar).

0.11 (2015-08-21)
    - Add libsass filter (Mantas, sirex).
    - Add SlimitIt filter (Michael Fladischer).
    - Prevent filters from crashing if the input file is empty (empty string
      passed).
    - A number of smaller improvements.

0.10.1 (2014-07-03)
    - Python 3 fixes.
    - Windows fix (Ionel Cristian Mărieș).

0.10 (2014-06-15)
    - Add autoprefixer filter (Vincent Driessen).
    - Add require.js filter (metagriffin, Erik Taubeneck)
    - A lot of bug fixes and small improvements.

0.9 (2013-10-25)
    webassets now support Python 3, and drops support for Python 2.5.

    - Filter for Closure Soy templates (Michael Su).
    - less filter can output source maps (Riccardo Forina).
    - Support .pyc only deployments (Mike C. Fletcher).
    - Jade template filter (Roshambo).
    - YAMLLoader improvements (incl. Cédric Reginster).
    - The gzip filter was removed.

0.8 (2012-11-23)
    A major change in this release is the removal of the ``django_assets``
    module. The django integration has moved to a separate project:
    https://github.com/miracle2k/django-assets
    See the "Upgrading" section in the documentation for more
    information; you'll also find other backwards-incomatible changes there.

    - Support for a multi-directory load path. See the
      ``Environment.append_path()`` method.
    - Compiler-style filters will now automatically run in debug mode.