@@ -1,3 +1,7 @@
+Unreleased
+    - Make the `sass` and `scss` filters compatible with the reference compiler
+    - Add new `sass_ruby` and `scss_ruby` filters to use the deprecated Ruby Sass compiler
+
 0.12.1 (2017-01-08)
     - Fix compatibility with Jinja 2.9.
     - When globbing, include files in alphabetical order (Sam Douglas).
